--- a/package.json
+++ b/package.json
@@ -1,50 +1,21 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "gatsby-starter-blog-theme",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "dependencies": {
-    "gatsby": "^2.20.12",
-    "gatsby-image": "^2.3.1",
-    "gatsby-plugin-manifest": "^2.3.3",
-    "gatsby-plugin-offline": "^3.1.2",
-    "gatsby-plugin-react-helmet": "^3.2.2",
-    "gatsby-plugin-sharp": "^2.5.3",
-    "gatsby-plugin-theme-ui": "^0.3.0",
-    "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-images": "^3.2.4",
-    "gatsby-source-filesystem": "^2.2.2",
-    "gatsby-theme-blog": "^1.4.25",
-    "gatsby-theme-tailwindcss": "^1.1.0",
-    "gatsby-transformer-remark": "^2.7.3",
-    "gatsby-transformer-sharp": "^2.4.3",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
-  },
-  "devDependencies": {
-    "prettier": "2.0.4"
-  },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
+  "version": "0.0.1",
   "scripts": {
-    "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "clean": "gatsby clean"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  "dependencies": {
+    "gatsby": "^2.21.0",
+    "gatsby-plugin-manifest": "^2.4.1",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-remark-images": "^3.3.0",
+    "gatsby-theme-blog": "^1.5.0",
+    "gatsby-theme-tailwindcss": "^1.1.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
