--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^14.1.1",
     "gatsby": "^2.21.0",
     "gatsby-plugin-google-analytics": "^2.3.0",
     "gatsby-plugin-manifest": "^2.4.1",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-images": "^3.3.0",
+    "gatsby-source-contentful": "^2.3.43",
     "gatsby-theme-blog": "^1.5.0",
     "gatsby-theme-tailwindcss": "^1.1.0",
     "react": "^16.12.0",
